Part 2a done. Moving everything to one notebook

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -84,11 +84,11 @@
     "    file = 'data.json'\n",
     "    df = to_dataframe(file)\n",
     "    part_2a(df)\n",
-    "    part_2a(df)\n",
-    "    part_2a(df)\n",
-    "    part_2a(df)\n",
-    "    part_2a(df)\n",
-    "    part_2a(df)\n",
+    "    part_3a(df)\n",
+    "    part_3b(df)\n",
+    "    part_3c(df)\n",
+    "    part_3d(df)\n",
+    "    part_3e(df)\n",
     "    "
    ]
   },
