Fixed workaround bug

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -10,12 +10,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=================================== APPLIED DATA SCIENCE: FINAL PROJECT ===================================\n",
+      "========================= APPLIED DATA SCIENCE: FINAL PROJECT =========================\n",
       "\n",
       ".........Part 2a Plot Saved!\n",
       "\n",
-      "--------------- LINEAR REGRESSION PREDICTIONS ---------------\n",
-      "\n",
+      "-----------------------------\n",
+      "LINEAR REGRESSION PREDICTIONS\n",
       "+-----------+---------------+\n",
       "|    Date   |   Prediction  |\n",
       "+-----------+---------------+\n",
@@ -40,7 +40,7 @@
       "\n",
       "=================================== Done Processing Data ===================================\n",
       "\n",
-      "TOTAL ANALYSIS TIME: 0:00:00.566185\n"
+      "TOTAL ANALYSIS TIME: 0:00:00.622710\n"
      ]
     }
    ],
@@ -56,16 +56,26 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "# import matplotlib as mpl\n",
-    "# mpl.use('TkAgg')\n",
-    "\n",
-    "import os, sys, json, math, time\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import datetime as dt\n",
-    "from scipy import stats\n",
-    "from prettytable import PrettyTable\n",
+    "try:\n",
+    "  import os, sys, json, math, time\n",
+    "  import matplotlib.pyplot as plt\n",
+    "  import pandas as pd\n",
+    "  import numpy as np\n",
+    "  import datetime as dt\n",
+    "  from scipy import stats\n",
+    "  from prettytable import PrettyTable\n",
+    "except ImportError as e:\n",
+    "  # work around for Mac OS\n",
+    "  if str(e).startswith('Python is not installed as a framework. The Mac OS X backend will not'):\n",
+    "    import matplotlib as mpl\n",
+    "    mpl.use('TkAgg')\n",
+    "    import os, sys, json, math, time\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import pandas as pd\n",
+    "    import numpy as np\n",
+    "    import datetime as dt\n",
+    "    from scipy import stats\n",
+    "    from prettytable import PrettyTable\n",
     "\n",
     "    \n",
     "def part_2a(df):\n",
@@ -103,7 +113,9 @@
     "    dates = list(df_2017['date'])\n",
     "    form_dates = [dt.datetime.strftime(date, '%b, %Y') for date in dates]\t\t# format date objects to nice strings\n",
     "    \n",
-    "    print('-'*15 + \" LINEAR REGRESSION PREDICTIONS \" + '-'*15 + '\\n')\n",
+    "    print(\"-----------------------------\")\n",
+    "    print(\"LINEAR REGRESSION PREDICTIONS\")\n",
+    "\n",
     "    t = PrettyTable()\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t# tabulate line reg predictions\n",
     "    t.add_column(column=form_dates, fieldname='Date') \n",
     "    t.add_column(column=line, fieldname='Prediction')\n",
@@ -152,7 +164,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    print(\"\\n\" + \"=\"*35 + \" APPLIED DATA SCIENCE: FINAL PROJECT \" + \"=\"*35 + \"\\n\")\n",
+    "    print(\"\\n\" + \"=\"*25 + \" APPLIED DATA SCIENCE: FINAL PROJECT \" + \"=\"*25 + \"\\n\")\n",
     "    \n",
     "    start = time.time()\n",
     "    \n",
