--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
       "\n",
       "=================================== Done Processing Data ===================================\n",
       "\n",
-      "TOTAL ANALYSIS TIME: 0:00:00.622710\n"
+      "TOTAL ANALYSIS TIME: 0:00:00.636155\n"
      ]
     }
    ],
@@ -85,9 +85,12 @@
     "    df['Value'] = df['Value'].apply(to_float)\t\t\t\t\t# convert 'Value' column to float\n",
     "\n",
     "    fig, ax = plt.subplots()\n",
-    "    df.plot(x='date', y='Value', style='-', figsize=(15,8), ax=ax)\n",
+    "    df.plot(x='date', y='Value', style='-', figsize=(15,8), ax=ax, color='xkcd:aqua')\n",
     "    plt.xlim(pd.Timestamp('1989-01-01'), pd.Timestamp('2002-12-31'))\n",
-    "    \n",
+    "    plt.title('1989 - 2002 Turkey Slaughters')\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Number of Turkeys')\n",
+    "    #plt.show()\n",
     "    path_to_dir = os.path.join(os.getcwd(), '.', 'plots/') \t\t# Save plot to '/plots' directory\n",
     "    if not os.path.exists(path_to_dir):\n",
     "        os.makedirs(path_to_dir)\n",
@@ -146,8 +149,13 @@
     "\n",
     "def part_3e(x, y, line):\n",
     "    fig = plt.figure(figsize=(15,8))\n",
-    "    plt.plot(x, y,'-', x, line)\t\t\t\t\t\t\t\t# plot everthing on the same figure\n",
-    "\n",
+    "    l1, l2 = plt.plot(x, line,'--', x, y)\t\t\t\t\t\t\t\t# plot everthing on the same figure\n",
+    "    plt.title('Turkey Slaughters in 2017')\n",
+    "    plt.xlabel('Month')\n",
+    "    plt.ylabel('Number of Turkeys')\n",
+    "    plt.xticks(x, [\"Feb\", \"March\", \"April\", \"May\", \"June\", \"July\", \"August\", \"September\", \"October\", \"November\", \"December\"])\n",
+    "    plt.setp(l1, linewidth=2, color=\"xkcd:aquamarine\")  # line1 is thick and red\n",
+    "    plt.setp(l2, linewidth=1, color='xkcd:turquoise')  # line2 is thinner and green\n",
     "    path_to_dir = os.path.join(os.getcwd(), '.', 'plots/')\t# Save to plots folder\n",
     "    fig.savefig(path_to_dir + 'Line_Reg.png'); print(\"\\n.........Part 3e Plot Saved!\"); plt.close(fig)\n",
     "    return\n",
@@ -183,6 +191,15 @@
     "    print(\"TOTAL ANALYSIS TIME: \" + str(dt.timedelta(seconds=(end - start))))\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
